--- a/index.html
+++ b/index.html
@@ -11,17 +11,14 @@
     <title>To Do List</title>
   </head>
   <body>
-    <div class="container">
-      <div class="form">
-        <input type="text" class="input" />
-        <input type="submit" class="add" value="Add Task" />
+   <div class="container">
+        <div class="form">
+          <input type="text" class="input" placeholder="Add a task"/>
+          <input type="text" class="add" value="add task" readonly/>
+        </div>
+        <div class="tasks">
+        </div>
       </div>
-      <div class="tasks">
-      </div>
-      <div class="image">
-        <img src="./Checklist.png" alt="">
-      </div>
-    </div>
     <script src="main.js"></script>
   </body>
 </html>
